replace Collections.emptyList() with List.of()